<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">小健健康</string>
    <!-- 引导页 -->
    <string name="product_words">健康笔记，记录每一天健康生活</string>
    <string name="company_copyrighten">Suzhou BroadChance Electronic Technology Co.LTD</string>
    <string name="company_copyrightcn">苏州博思长健电子科技有限公司</string>

    <!-- 主页 -->
    <string name="helpcall">紧急呼叫</string>
    <string name="personalhealth">个人健康</string>
    <string name="lovercare">亲情关注</string>
    <string name="cloudservice">关爱服务</string>

    <!-- 设置 -->
    <string name="settings_change_mobilephone">更换手机号</string>
    <string name="settings_settings">设置</string>
    <string name="settings_logout">注销账号</string>
    <string name="settings_pushmsg">消息推送</string>
    <string name="settings_bgmusic">背景音乐</string>
    <string name="settings_userguide">用户指南</string>
    <string name="settings_about">关于</string>

    <!-- 个人健康 -->
    <string name="personalecg">心电</string>
    <string name="personalsleep">睡眠</string>
    <string name="personalsports">运动</string>
    <string name="personalhealth_todaycomments">今日总体评价：</string>

    <!-- 心电 -->
    <string name="tab_main">首页</string>
    <string name="tab_ecg_cur">心电</string>
    <string name="tab_ecg_his">心电记录</string>
    <string name="personalhealth_ecg_conplayback">连续播放</string>
    <string name="personalhealth_ecg_playbackerror">仅播放异常</string>
    <string name="personalhealth_ecg_periodplayback">按时段播放</string>
    <string name="personalhealth_ecg_selperiod">选择播放时段</string>

    <!-- 睡眠 -->
    <string name="tab_sleep_cur">睡眠</string>
    <string name="tab_sleep_his">睡眠记录</string>
    <string name="personalhealth_sleep_reverse">翻身</string>
    <string name="personalhealth_sleep_avgbreath">平均呼吸</string>
    <string name="personalhealth_sleep_fastbreath">过快呼吸</string>
    <string name="personalhealth_sleep_slowbreath">过缓呼吸</string>
    <string name="personalhealth_sleep_time">有效睡眠</string>
    <string name="personalhealth_sleep_fallsleep">入睡</string>
    <string name="personalhealth_sleep_wakeup">睡醒</string>
    <!-- 运动 -->
    <string name="tab_sports_cur">运动</string>
    <string name="tab_sports_his">运动记录</string>
    <string name="personalhealth_sports_stepindicator">步数</string>
    <string name="personalhealth_sports_calorieindicator">热量(大卡)</string>
    <string name="personalhealth_sports_heartrateindicator">心率</string>
    <string name="personalhealth_sports_breathrateindicator">呼吸</string>
    <string name="personalhealth_sports_setgoal">设置新目标</string>
    <string name="personalhealth_sports_comprogress">已完成：{0}%</string>
    <string name="personalhealht_sports_confirm">设置</string>
    <string name="personalhealht_sports_confirmtip">请输入目标值</string>
    <!-- 关爱服务 -->
    <string name="cloudservice_product">产品</string>
    <string name="cloudservice_service">服务</string>
    <string name="cloudservice_activity">活动</string>
    <string name="cloudservice_buy">购买</string>
    <string name="cloudservice_download">下载</string>
    <string name="cloudservice_ask">咨询</string>
    <string name="cloudservice_orderquery">订单查询</string>
    <string name="cloudservice_prorec">专家建议</string>

</resources>